--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head> <title> وب سایت شخصی </title></head>
-
+  <link rel="stylesheet" href="css/app.css">
 <body dir=rtl>
   <h2> علم داده و کاربردهای آن </h2>
   <p>به وب سایت رضابهره مند خیرآبادی خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
