--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <head> <title> وب سایت شخصی </title></head>
   <link rel="stylesheet" href="css/app.css">
+  <body class="container is-max-desktop">
 <body dir=rtl>
-  <h2> علم داده و کاربردهای آن </h2>
-  <p>به وب سایت رضابهره مند خیرآبادی خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
+  <h2 class="title has-text-danger"> علم داده و کاربردهای آن </h2>
+  <p class="box m-5 has-background-light">به وب سایت رضابهره مند خیرآبادی خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
 
 </html>
