--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head> <title> وب سایت شخصی </title></head>
   <link rel="stylesheet" href="css/app.css">
   <body class="container is-max-desktop">
+    <embed src="" width="500" height="300">
+
 <body dir=rtl>
   <h2 class="title has-text-danger"> علم داده و کاربردهای آن </h2>
-  <p class="box m-5 has-background-light">به وب سایت رضابهره مند خیرآبادی خوش آمدید. در این وب سایت، مطالب مرتبط با علم داده را با هم مرور خواهیم کرد.</p>
-<img src="تصویر با کیفیت پرچم ایران به حالت قلب-small-1000-logo"/>
+  <p class="box m-5 has-background-light">به وب سایت رضابهره مند خیرآبادی خوش آمدید.</p>
+
 </html>
