--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> <title> وب سایت شخصی </title></head>
   <link rel="stylesheet" href="css/app.css">
   <body class="container is-max-desktop">
-    <embed src="" width="500" height="300">
+    <embed src="5ff947553b451.jpg" width="500" height="300">
 
 <body dir=rtl>
   <h2 class="title has-text-danger"> علم داده و کاربردهای آن </h2>
