--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <link rel="stylesheet" href="css/app.css">
   <body class="container is-max-desktop">
     <embed src="5ff947553b451.jpg" width="500" height="300">
+<address>
+ Written by RezaBahremand <br>
+ Email : rezabkh79@gmail.com <br>
+ My Location : Iran, Mashhad <br>
+</address> 
 
 <body dir=rtl>
-  <h2 class="title has-text-danger"> علم داده و کاربردهای آن </h2>
-  <p class="box m-5 has-background-light">به وب سایت رضابهره مند خیرآبادی خوش آمدید.</p>
+  <h2 class="title has-text-danger"> Data science and its applications </h2>
+  <p class="box m-5 has-background-light">Welcome to the Rezabahremand Kheirabadi website
+.</p>
 
 </html>
