--- a/index.html
+++ b/index.html
@@ -1,18 +1,137 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>تاپ سایت 98</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+box-sizing: border-box;
+}
+body {
+font-family: Arial, Helvetica, sans-serif;
+margin: 0;
+}
+.header {
+padding: 80px;
+text-align: center;
+background: #1abc9c;
+color: white;
+}
+.header h1 {
+font-size: 40px;
+}
+.navbar {
+overflow: hidden;
+background-color: #333;
+position: sticky;
+position: -webkit-sticky;
+top: 0;
+}
+.navbar a {
+float: left;
+display: block;
+color: white;
+text-align: center;
+padding: 14px 20px;
+text-decoration: none;
+}
+.navbar a.right {
+float: right;
+}
+.navbar a:hover {
+background-color: #ddd;
+color: black;
+}
+.navbar a.active {
+background-color: #666;
+color: white;
+}
+.row {
+display: -ms-flexbox; /* IE10 */
+display: flex;
+-ms-flex-wrap: wrap; /* IE10 */
+flex-wrap: wrap;
+}
+.side {
+-ms-flex: 30%; /* IE10 */
+flex: 30%;
+background-color: #f1f1f1;
+padding: 20px;
+}
+.main {
+-ms-flex: 70%; /* IE10 */
+flex: 70%;
+background-color: white;
+padding: 20px;
+}
+.fakeimg {
+background-color: #aaa;
+width: 100%;
+padding: 20px;
+}
+.footer {
+padding: 20px;
+text-align: center;
+background: #ddd;
+}
+@media screen and (max-width: 700px) {
+.row {
+flex-direction: column;
+}
+}
+@media screen and (max-width: 400px) {
+.navbar a {
+float: none;
+width: 100%;
+}
+}
+</style>
+</head>
+<body>
 
-<head> <title> وب سایت شخصی </title></head>
-  <link rel="stylesheet" href="css/app.css">
-  <body class="container is-max-desktop">
-    <embed src="5ff947553b451.jpg" width="1000" height="600">
-<address>
- Written by RezaBahremand <br>
- Email : rezabkh79@gmail.com <br>
- My Location : Iran, Mashhad <br>
-</address> 
+<div class="header">
+<h1>تاپ سایت 98</h1>
+<p style="font-weight: bold">آموزش رایگان کامپیوتر و برنامه نویسی</p>
+</div>
 
-<body dir=rtl>
-  <h2 class="title has-text-danger"> Data science and its applications </h2>
-  <p class="box m-5 has-background-light">Welcome to the Rezabahremand Kheirabadi website
-.</p>
+<div class="navbar">
+<a href="#" class="active">Home</a>
+<a href="#">Link</a>
+<a href="#">Link</a>
+<a href="#" class="right">Link</a>
+</div>
 
+<div class="row">
+<div class="side">
+<h2>About Me</h2>
+<h5>Photo of me:</h5>
+<div class="fakeimg" style="height:200px;">Image</div>
+<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+<h3>More Text</h3>
+<p>Lorem ipsum dolor sit ame.</p>
+<div class="fakeimg" style="height:60px;">Image</div><br>
+<div class="fakeimg" style="height:60px;">Image</div><br>
+<div class="fakeimg" style="height:60px;">Image</div>
+</div>
+<div class="main">
+<h2>TITLE HEADING</h2>
+<h5>Title description, Dec 7, 2017</h5>
+<div class="fakeimg" style="height:200px;">Image</div>
+<p>Some text..</p>
+<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<br>
+<h2>TITLE HEADING</h2>
+<h5>Title description, Sep 2, 2017</h5>
+<div class="fakeimg" style="height:200px;">Image</div>
+<p>Some text..</p>
+<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+</div>
+</div>
+
+<div class="footer">
+<h2>Footer</h2>
+</div>
+
+</body>
 </html>
