--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>تاپ سایت 98</title>
+<title>وب سایت شخصی</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -91,8 +91,8 @@ width: 100%;
 <body>
 
 <div class="header">
-<h1>تاپ سایت 98</h1>
-<p style="font-weight: bold">آموزش رایگان کامپیوتر و برنامه نویسی</p>
+<h1>data science</h1>
+<p style="font-weight: bold">Welcome to the website of Reza Behermand</p>
 </div>
 
 <div class="navbar">
