--- a/index.html
+++ b/index.html
@@ -1,137 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title>وب سایت شخصی</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-box-sizing: border-box;
-}
-body {
-font-family: Arial, Helvetica, sans-serif;
-margin: 0;
-}
-.header {
-padding: 80px;
-text-align: center;
-background: #1abc9c;
-color: white;
-}
-.header h1 {
-font-size: 40px;
-}
-.navbar {
-overflow: hidden;
-background-color: #333;
-position: sticky;
-position: -webkit-sticky;
-top: 0;
-}
-.navbar a {
-float: left;
-display: block;
-color: white;
-text-align: center;
-padding: 14px 20px;
-text-decoration: none;
-}
-.navbar a.right {
-float: right;
-}
-.navbar a:hover {
-background-color: #ddd;
-color: black;
-}
-.navbar a.active {
-background-color: #666;
-color: white;
-}
-.row {
-display: -ms-flexbox; /* IE10 */
-display: flex;
--ms-flex-wrap: wrap; /* IE10 */
-flex-wrap: wrap;
-}
-.side {
--ms-flex: 30%; /* IE10 */
-flex: 30%;
-background-color: #f1f1f1;
-padding: 20px;
-}
-.main {
--ms-flex: 70%; /* IE10 */
-flex: 70%;
-background-color: white;
-padding: 20px;
-}
-.fakeimg {
-background-color: #aaa;
-width: 100%;
-padding: 20px;
-}
-.footer {
-padding: 20px;
-text-align: center;
-background: #ddd;
-}
-@media screen and (max-width: 700px) {
-.row {
-flex-direction: column;
-}
-}
-@media screen and (max-width: 400px) {
-.navbar a {
-float: none;
-width: 100%;
-}
-}
-</style>
+    <title>رضا بهره مند خیرآبادی</title>
 </head>
 <body>
+    <h1>رزومه</h1>
+    <p> تحصیلات:ارشد علوم داده</p>
+    <img src="profile_pic.jpg" alt="عکس پروفایل">
+    <h2>کدها</h2>
+    <button onclick="openCode('code1')">کد 1</button>
+    <button onclick="openCode('code2')">کد 2</button>
+    <div id="code1" style="display:none;">
+        <p>کد 1: print('Hello, World!')</p>
+    </div>
+    <div id="code2" style="display:none;">
+        <p>کد 2: for i in range(5): print(i)</p>
+    </div>
 
-<div class="header">
-<h1>data science</h1>
-<p style="font-weight: bold">Welcome to the website of Reza Behermand</p>
-</div>
-
-<div class="navbar">
-<a href="#" class="active">Home</a>
-<a href="#">Link</a>
-<a href="#">Link</a>
-<a href="#" class="right">Link</a>
-</div>
-
-<div class="row">
-<div class="side">
-<h2>About Me</h2>
-<h5>Photo of me:</h5>
-<div class="fakeimg" style="height:200px;">Image</div>
-<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-<h3>More Text</h3>
-<p>Lorem ipsum dolor sit ame.</p>
-<div class="fakeimg" style="height:60px;">Image</div><br>
-<div class="fakeimg" style="height:60px;">Image</div><br>
-<div class="fakeimg" style="height:60px;">Image</div>
-</div>
-<div class="main">
-<h2>TITLE HEADING</h2>
-<h5>Title description, Dec 7, 2017</h5>
-<div class="fakeimg" style="height:200px;">Image</div>
-<p>Some text..</p>
-<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-<br>
-<h2>TITLE HEADING</h2>
-<h5>Title description, Sep 2, 2017</h5>
-<div class="fakeimg" style="height:200px;">Image</div>
-<p>Some text..</p>
-<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-</div>
-</div>
-
-<div class="footer">
-<h2>Footer</h2>
-</div>
-
+    <script>
+        function openCode(codeId) {
+            var code = document.getElementById(codeId);
+            if (code.style.display === "none") {
+                code.style.display = "block";
+            } else {
+                code.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
