--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     <div id="code2" style="display:none;">
         <p>کد 2: for i in range(5): print(i)</p>
     </div>
-
+<head>
+    <style>
+        body {
+            background-image: url('5ff947553b451.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+    </style>
+</head>
     <script>
         function openCode(codeId) {
             var code = document.getElementById(codeId);
