--- a/index.html
+++ b/index.html
@@ -2,31 +2,54 @@
 <html>
 <head>
     <title>رضا بهره مند خیرآبادی</title>
-</head>
-<body>
-    <h1>رزومه</h1>
-    <p> تحصیلات:ارشد علوم داده</p>
-    <img src="profile_pic.jpg" alt="عکس پروفایل">
-  
-<head>
     <style>
         body {
-            background-image: url('5ff947553b451.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .profile {
+            float: left;
+            width: 30%;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .profile img {
+            width: 100%;
+            border-radius: 50%;
+        }
+        .resume {
+            float: left;
+            width: 70%;
+            padding: 20px;
+            box-sizing: border-box;
         }
     </style>
 </head>
-    <script>
-        function openCode(codeId) {
-            var code = document.getElementById(codeId);
-            if (code.style.display === "none") {
-                code.style.display = "block";
-            } else {
-                code.style.display = "none";
-            }
-        }
-    </script>
+<body>
+    <header>
+        <h1>رضا بهره مند خیرآبادی</h1>
+    </header>
+    <div class="container">
+        <div class="profile">
+            <img src="profile_pic.jpg" alt="عکس پروفایل">
+        </div>
+        <div class="resume">
+            <h2>رزومه</h2>
+            <p>تحصیلات: ارشد علوم داده</p>
+        </div>
+    </div>
 </body>
 </html>
