--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <img src="image2.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2">
             <img src="image3.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3">
         </div>
-        <div class="resume" onclick="showResume()">
-            <h2>رزومه</h2>
-            <p>تحصیلات: ارشد علوم داده</p>
+        <div class="button" onclick="alert("دانشجوی کارشناسی ارشد علوم داده دانشگاه فردوسی مشهد،فارغ التحصیل کارشناسی آموزش ریاضی دانشگاه فرهنگیان پردیس شهید بهشتی مشهد،دانش آموخته دبیرستان شهید هاشمی نژاد1 مشهد")">
+            <h2>تحصیلات</h2>
+        
         </div>
     </div>
 
