--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
             <img src="image2.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2">
             <img src="image3.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3">
         </div>
-        <div class="button" onclick="alert("دانشجوی کارشناسی ارشد علوم داده دانشگاه فردوسی مشهد،فارغ التحصیل کارشناسی آموزش ریاضی دانشگاه فرهنگیان پردیس شهید بهشتی مشهد،دانش آموخته دبیرستان شهید هاشمی نژاد1 مشهد")">
+        <div class="resume" onclick="showEducation()">
             <h2>تحصیلات</h2>
-        
         </div>
     </div>
 
@@ -62,8 +61,8 @@
             document.body.appendChild(largeImage);
         }
 
-        function showResume() {
-            alert('رزومه رضا بهره مند خیرآبادی');
+        function showEducation() {
+            alert('دانشجوی کارشناسی ارشد علوم داده دانشگاه فردوسی مشهد، فارغ التحصیل کارشناسی آموزش ریاضی دانشگاه فرهنگیان پردیس شهید بهشتی مشهد، دانش‌آموخته دبیرستان شهید هاشمی نژاد 1 مشهد');
         }
     </script>
 </body>
