--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="images">
             <img src="photo_2024-02-23_08-41-07.jpg" onclick="showImage('image1_large.jpg')" alt="تصویر 1">
-            <img src="image2.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2">
+            <img src="photo_2024-02-23_08-41-17.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2">
             <img src="image3.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3">
         </div>
         <div class="resume" onclick="showEducation()">
