--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <h1>رضا بهره مند خیرآبادی</h1>
     </header>
     <div class="container">
-        <div class="images">
+        <div class="images" onclick="showImages()">
+            <h2>تصاویر</h2>
             <img src="photo_2024-02-23_08-41-07.jpg" onclick="showImage('image1_large.jpg')" alt="تصویر 1">
             <img src="photo_2024-02-23_08-41-17.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2">
             <img src="photo_2024-02-23_08-40-52.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3">
@@ -63,6 +64,10 @@
 
         function showEducation() {
             alert('دانشجوی کارشناسی ارشد علوم داده دانشگاه فردوسی مشهد، فارغ التحصیل کارشناسی آموزش ریاضی دانشگاه فرهنگیان پردیس شهید بهشتی مشهد، دانش‌آموخته دبیرستان شهید هاشمی نژاد 1 مشهد');
+        }
+
+        function showImages() {
+            alert('تصاویر نمایش داده شدند');
         }
     </script>
 </body>
