--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     function showImages() {
         var imagesDiv = document.querySelector('.images');
         imagesDiv.style.display = 'block';
-        alert('تصاویر نمایش داده شدند');
     }
 
     function showBio() {
@@ -22,7 +21,7 @@
     }
 
     function showMisc() {
-        window.open('miscellaneous.html', '_blank');
+        alert('این بخش در حال توسعه است');
     }
 </script>
 </body> </html>
