--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> <head> <title>رضا بهره مند خیرآبادی</title> <style> body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; } header { background-color: #333; color: #fff; text-align: center; padding: 10px 0; } .container { width: 80%; margin: auto; overflow: hidden; } .links { text-align: center; padding: 10px 0; background-color: #333; } .links a { color: #fff; text-decoration: none; margin: 0 10px; } .images { display: none; } .resume { float: left; width: 70%; padding: 20px; box-sizing: border-box; } </style> </head> <body> <header> <h1>رضا بهره مند خیرآبادی</h1> </header> <div class="links"> <a href="#" onclick="showImages()">تصاویر</a> <a href="#" onclick="showBio()">بیوگرافی</a> <a href="#" onclick="showEducation()">آموزشی</a> <a href="#" onclick="showMisc()">متفرقه</a> </div> <div class="container"> <div class="images"> <h2>تصاویر</h2> <img src="photo_2024-02-23_08-41-07.jpg" onclick="showImage('image1_large.jpg')" alt="تصویر 1"> <img src="photo_2024-02-23_08-41-17.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2"> <img src="photo_2024-02-23_08-40-52.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3"> </div> <div class="resume"> <h2>تحصیلات</h2> </div> </div>
+<!DOCTYPE html> <html lang="fa"> <head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>رضا بهره مند خیرآبادی</title> <style> body { font-family: Tahoma, Arial, sans-serif; direction: rtl; text-align: right; } header { background-color: #333; color: white; text-align: center; padding: 10px 0; } .links { text-align: center; margin-top: 10px; } .container { display: flex; justify-content: space-between; margin: 20px; } .images { display: none; } .resume { float: left; width: 70%; padding: 20px; box-sizing: border-box; } </style> </head> <body> <header> <h1>رضا بهره مند خیرآبادی</h1> </header> <div class="links"> <a href="#" onclick="showImages()">تصاویر</a> <a href="#" onclick="showBio()">بیوگرافی</a> <a href="#" onclick="showEducation()">آموزشی</a> <a href="#" onclick="showMisc()">متفرقه</a> </div> <div class="container"> <div class="images"> <h2>تصاویر</h2> <img src="photo_2024-02-23_08-41-07.jpg" onclick="showImage('image1_large.jpg')" alt="تصویر 1"> <img src="photo_2024-02-23_08-41-17.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2"> <img src="photo_2024-02-23_08-40-52.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3"> </div> <div class="resume"> <h2>بیوگرافی</h2> <p>من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.</p> </div> </div>
 <script>
     function showImage(imageUrl) {
         var largeImage = document.createElement('img');
@@ -8,7 +8,7 @@
     }
 
     function showEducation() {
-        alert('دانشجوی کارشناسی ارشد علوم داده دانشگاه فردوسی مشهد، فارغ التحصیل کارشناسی آموزش ریاضی دانشگاه فرهنگیان پردیس شهید بهشتی مشهد، دانش‌آموخته دبیرستان شهید هاشمی نژاد 1 مشهد');
+        alert('این بخش در حال توسعه است');
     }
 
     function showImages() {
@@ -17,7 +17,9 @@
     }
 
     function showBio() {
-        alert('بیوگرافی نمایش داده شد');
+        var bioParagraph = document.createElement('p');
+        bioParagraph.textContent = 'من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.';
+        document.querySelector('.resume').appendChild(bioParagraph);
     }
 
     function showMisc() {
