--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         }
         }
 
+document.body.style.backgroundImage = "url('')";
+document.body.style.backgroundSize = "cover";
+document.body.style.backgroundRepeat = "no-repeat";
 
    
     function showMisc() {
