--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         }
 
-document.body.style.backgroundImage = "url('')";
+document.body.style.backgroundImage = "url('dark-wallpapers-994x400.jpg.webp')";
 document.body.style.backgroundSize = "cover";
 document.body.style.backgroundRepeat = "no-repeat";
 
