--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function showBio() {
         }
         }
 
-document.body.style.backgroundImage = "url('dark-wallpapers-994x400.jpg.webp')";
+document.body.style.backgroundImage = "url('1.jpg')";
 document.body.style.backgroundSize = "cover";
 document.body.style.backgroundRepeat = "no-repeat";
 
