--- a/index.html
+++ b/index.html
@@ -15,23 +15,18 @@
         var imagesDiv = document.querySelector('.images');
         imagesDiv.style.display = 'block';
     }
-function showBio() {
-    var bioParagraph = document.createElement('p');
-    bioParagraph.textContent = 'من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.';
-    
-    if (!bioShown) {
-        var resumeDiv = document.querySelector('.resume');
-        resumeDiv.appendChild(bioParagraph);
-        resumeDiv.style.color = 'white'; // تغییر رنگ متن به سفید
-        resumeDiv.style.display = 'block';
-        bioShown = true;
-    }
-}
-
+  function showBio() {
+            var bioParagraph = document.createElement('p');
+            bioParagraph.textContent = 'من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.';
+            document.querySelector('.resume');
+       if (!bioShown) {
+            var resumeDiv = document.querySelector('.resume');
+            resumeDiv.style.display = 'block';
+            bioShown = true;
         }
         }
 
-document.body.style.backgroundImage = "url('1.jpg')";
+document.body.style.backgroundImage = "url('dark-wallpapers-994x400.jpg.webp')";
 document.body.style.backgroundSize = "cover";
 document.body.style.backgroundRepeat = "no-repeat";
 
