--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-</head> <body> <header> <h1>رضا بهره مند خیرآبادی</h1> </header> <div class="links"> <a href="#" onclick="showImages()">تصاویر</a> <a href="#" onclick="showBio()">بیوگرافی</a> <a href="#" onclick="showEducation()">آموزشی</a> <a href="#" onclick="showMisc()">متفرقه</a> </div> <div class="container"> <div class="images"> <h2>تصاویر</h2> <img src="photo_2024-02-23_08-41-07.jpg" onclick="showImage('image1_large.jpg')" alt="تصویر 1"> <img src="photo_2024-02-23_08-41-17.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2"> <img src="photo_2024-02-23_08-40-52.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3"> </div> <div class="resume"> <h2>بیوگرافی</h2> <p>من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.</p> </div> </div> <script> function showImage(imageUrl) { var largeImage = document.createElement('img'); largeImage.src = imageUrl; largeImage.style.width = '100%'; document.body.appendChild(largeImage); }
+<!DOCTYPE html> <html lang="fa"> <head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>رضا بهره مند خیرآبادی</title> <style> body { font-family: Tahoma, Arial, sans-serif; direction: rtl; text-align: right; } header { background-color: #333; color: white; text-align: center; padding: 10px 0; } .links { text-align: center; margin-top: 10px; } .container { display: flex; justify-content: space-between; margin: 20px; } .images { display: none; } .resume { float: left; width: 70%; padding: 20px; box-sizing: border-box; } </style> </head> <body> <header> <h1>رضا بهره مند خیرآبادی</h1> </header> <div class="links"> <a href="#" onclick="showImages()">تصاویر</a> <a href="#" onclick="showBio()">بیوگرافی</a> <a href="#" onclick="showEducation()">آموزشی</a> <a href="#" onclick="showMisc()">متفرقه</a> </div> <div class="container"> <div class="images"> <h2>تصاویر</h2> <img src="photo_2024-02-23_08-41-07.jpg" onclick="showImage('image1_large.jpg')" alt="تصویر 1"> <img src="photo_2024-02-23_08-41-17.jpg" onclick="showImage('image2_large.jpg')" alt="تصویر 2"> <img src="photo_2024-02-23_08-40-52.jpg" onclick="showImage('image3_large.jpg')" alt="تصویر 3"> </div> <div class="resume"> <h2>بیوگرافی</h2> <p>من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.</p> </div> </div>
+<script>
+    function showImage(imageUrl) {
+        var largeImage = document.createElement('img');
+        largeImage.src = imageUrl;
+        largeImage.style.width = '100%';
+        document.body.appendChild(largeImage);
+    }
 
- 
     function showEducation() {
         alert('این بخش در حال توسعه است');
     }
@@ -9,27 +15,24 @@
         var imagesDiv = document.querySelector('.images');
         imagesDiv.style.display = 'block';
     }
-
-    var bioShown = false;
-
-    function showBio() {
-        var bioParagraph = document.createElement('p');
-        bioParagraph.textContent = 'من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.';
-        document.querySelector('.resume').innerHTML = bioParagraph.outerHTML;
-        if (!bioShown) {
+  function showBio() {
+            var bioParagraph = document.createElement('p');
+            bioParagraph.textContent = 'من رضا بهره مند خیرآبادی متولد 5 آبان 1379 در مشهد هستم. من عاشق سیاست و ورزش هستم، من طرفدار رِئال مادرید و استقلال هستم. در حال حاضر دبیر ریاضی هستم و دانشجوی ارشد علوم داده دانشگاه فردوسی مشهد. دوره کارشناسی خود را در رشته آموزش ریاضی دانشگاه فرهنگیان گذراندم، و دوره دبیرستان را در رشته ریاضی فیزیک دبیرستان هاشمی نژاد 1 مشهد گذراندم.';
+            document.querySelector('.resume');
+       if (!bioShown) {
             var resumeDiv = document.querySelector('.resume');
             resumeDiv.style.display = 'block';
             bioShown = true;
         }
-    }
+        }
 
-    document.body.style.backgroundImage = "url('dark-wallpapers-994x400.jpg.webp')";
-    document.body.style.backgroundSize = "cover";
-    document.body.style.backgroundRepeat = "no-repeat";
+document.body.style.backgroundImage = "url('dark-wallpapers-994x400.jpg.webp')";
+document.body.style.backgroundSize = "cover";
+document.body.style.backgroundRepeat = "no-repeat";
 
+   
     function showMisc() {
         alert('این بخش در حال توسعه است');
     }
 </script>
-
-</body> </html>
+</body> </html> 
