--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             bioShown = false;
         }
         }
-
+<style>
+    body {
+        background-image: url('5ff947553b451.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+</style>
 
    
     function showMisc() {
